Création du composant compétences

--- a/cv_react/src/styles/components/_navigation.scss
+++ b/cv_react/src/styles/components/_navigation.scss
@@ -114,7 +114,7 @@
       letter-spacing: 0.1rem;
       font-size: .7rem;
 
-      a, a:visited {
+      p{
         color: $color-5;
 
         &:hover {
