--- a/cv_react/src/styles/pages/_home.scss
+++ b/cv_react/src/styles/pages/_home.scss
@@ -14,7 +14,7 @@
         position: absolute;
         height: 100%;
         width: inherit;
-        background: url('../../media/codding.jpg') no-repeat center/cover;
+        background: url('./codding.jpg') no-repeat center/cover;
         z-index: -1;
         filter: brightness(30%);
       }
