--- a/cv_react/src/styles/pages/_home.scss
+++ b/cv_react/src/styles/pages/_home.scss
@@ -14,7 +14,7 @@
         position: absolute;
         height: 100%;
         width: inherit;
-        background: url('./codding.jpg') no-repeat center/cover;
+        background: url(../../asset/codding.jpg) no-repeat center/cover;
         z-index: -1;
         filter: brightness(30%);
       }
@@ -63,7 +63,7 @@
   @media screen and (max-width:580px){
     .homeContent {
       &:after {
-      background: url('../../media/hugo.png') no-repeat 60% 50%/cover !important;
+      background: url('../../../public/hugo.png') no-repeat 60% 50%/cover !important;
       }
       h1 {
         font-size: 3rem !important;
