--- a/cv_react/src/styles/styles.scss
+++ b/cv_react/src/styles/styles.scss
@@ -1,5 +1,5 @@
 @import './settings';
-@import "./pages/competence";
+@import './pages/competence';
 @import './pages/contact';
 @import './pages/home';
 @import './pages/notFound';
