suppression du style pour les balises i

--- a/cv_react/src/styles/components/_navigation.scss
+++ b/cv_react/src/styles/components/_navigation.scss
@@ -54,7 +54,7 @@
         font-size: 1.3rem;
         position: relative;
 
-        &:hover i {
+        &:hover {
           transform: translate(3px, 3px);
         }
 
@@ -63,13 +63,6 @@
         }
         .navActive {
           color: $color-4;
-        }
-
-        i {
-          position: absolute;
-          font-size: 0.95rem;
-          transform: translateY(3px);
-          transition: .2s ease;
         }
         span {
           margin-left: 2.7rem;
