Changement de couleur sur la $color-5

--- a/cv_react/src/styles/_settings.scss
+++ b/cv_react/src/styles/_settings.scss
@@ -8,7 +8,7 @@ $color-1: #2a1d52;
 $color-2: #6C77F4;
 $color-3: rgb(99, 164, 233);
 $color-4: #4FEDD2;
-$color-5: #36D0EA;
+$color-5: #31c0da;
 $white: #ddd;
 $black: #333;
 
